# CopyNumberVariation

./: CMakeLists.txt  average.sh  count_genes.py  diff_chr_corr.py  filter.py  filter_not_chr1.py  filter_same.py  gene_list.txt  gistic.cpp  h5_hyperslab.cpp  h5_hyperslab.h  h5_read.cpp  h5_read.h  h5_write.cpp  h5_write.h  h5dump.cpp  metagenecomp.py  pearson_block_ring.cpp  pearson_broadcast.cpp  pearson_hyperslab.cpp  pearson_small_block.cpp  probe_id_mapping.txt  probe_ids.txt  rho.cpp  rho_omp.cpp  rho_omp_ibs574.cpp  rho_single_threaded.cpp  same_corr.csv  sort.py  sortcsv.py  submit.pbs
geneselection/: GISTIC.Genes.txt  README  cleanup.pl  matching_gene_symbols.txt  metagenecomp.py  sort2.py  tcga-generanker.csv  tcga-generanker_1.csv
